--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,31 @@
   
 }
 
-.page-section {
+.section-anchor {
+  display: block;
+  position: relative;
+  top: -3.5rem;
+  visibility: hidden;
+}
+
+.section-body,
+.proj-picture {
   min-height: 50vh;
 }
 
+.page-section {
+  color: white;
+  text-align: left;
+}
+
 .section-1 {
-  
   background-color: var(--grey);
 }
 
 .section-2 {
   background-color: var(--med-grey);
+}
+
+.proj-picture {
+  background-color: var(--light-grey);
 }
