--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,89 @@
 
 .App {
   text-align: center;
-  background-image: url("./assets/headerbg.jpg");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  
+  overflow: hidden;
 }
 
-.section-anchor {
-  display: block;
-  position: relative;
-  top: -3.5rem;
-  visibility: hidden;
+.potrait-photo {
+  width: 85%;
+  animation: chromaticMove 4500ms ease infinite,light-pulse ease 200ms  infinite;
+  border: 4px solid white;
+  box-shadow: 10px 5px 5px rgba(39, 39, 39, .5);
 }
 
-.section-body,
-.proj-picture {
-  min-height: 50vh;
+body{
+  background:#000;
+  color:yellow;
+  text-align:center;
+  font-family:"Trebuchet MS";
+  text-transform:uppercase;
+  padding-top:2em;
+
+  background: linear-gradient(
+    to bottom,
+    blue,
+    blue 50%,
+    rgb(0, 50, 255) 50%,
+    rgb(0, 50, 255)
+  );
+  background-size: 100% 4px;
+  animation: gradientMove 200ms ease infinite;
 }
 
-.page-section {
+.body-container {
+  color: yellow;
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
+}
+
+h1{
+    font-size: 4em !important;
+    text-shadow: 3px 2px 2px rgba(251, 12, 12,1), 0px -1px 3px rgba(12, 79, 251,.5),-3px 0px 2px rgba(52, 251, 12, 1);
+    animation: chromaticMove 4500ms ease infinite,pulse ease 200ms  infinite;
+}
+
+.title-col h2 {
+  color: white !important;
+  text-shadow: 3px 2px 2px rgba(251, 12, 12,1), 0px -1px 3px rgba(12, 79, 251,.5),-3px 0px 2px rgba(52, 251, 12, 1);
+  animation: chromaticMove 4500ms ease infinite,pulse ease 200ms  infinite;
+}
+
+.sub-header {
   color: white;
-  text-align: left;
+  font-weight: bold;
+  animation: pulse ease 200ms  infinite;
 }
 
-.section-1 {
-  background-color: var(--grey);
+small{
+  display:block;
+  text-transform:initial;
+  font-size:24px;
 }
 
-.section-2 {
-  background-color: var(--med-grey);
+@keyframes gradientMove { 
+    0%{background-size: 100% 4px}
+    50%{background-size: 100% 2px}
+    100%{background-size: 100% 4px}
 }
 
-.proj-picture {
-  background-color: var(--light-grey);
+@keyframes pulse { 
+    0%{ opacity:.95;transform: skewX(.5deg);}
+    25%{ opacity:1;}
+    50%{opacity:.95;}
+    75%{ opacity:1; transform:skewX(.5deg);}
+    100%{opacity:.95;}
+}
+
+@keyframes light-pulse { 
+  0%{ opacity:.95;transform: skewX(.1deg);}
+  25%{ opacity:1;}
+  50%{opacity:.95;}
+  75%{ opacity:1; transform:skewX(.1deg);}
+  100%{opacity:.95;}
+}
+
+@keyframes chromaticMove { 
+    0%{text-shadow: 3px 2px 2px rgba(251, 12, 12,1), 0px -1px 3px rgba(12, 79, 251,.5),0px 0px -2px rgba(52, 251, 12, 1);}
+    50%{text-shadow: 3px 2px 2px rgba(251, 12, 12,1), 0px -1px 3px rgba(12, 79, 251,.5),-3px 2px 3px rgba(52, 251, 12, 1);}
+    100%{text-shadow: 3px 2px 2px rgba(251, 12, 12,1), 0px -1px 3px rgba(12, 79, 251,.5),2px -1px 2px rgba(52, 251, 12, 1);}
 }
