--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,35 @@
 
 .img-col {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
   padding-bottom: 20px;
 }
 
+.img-wrapper {
+  display: block;
+  text-align: left;
+  width: fit-content;
+  padding: 0 7.5% 0 7.5%;
+}
+
+.card-row {
+  display: flex;
+  padding-top: 1rem;
+  width: fit-content;
+}
+
+.skill-card {
+  display: flex;
+  justify-content: start;
+  height: fit-content;
+  width: calc(100%/2);
+  max-width: 200px;
+}
+
 .potrait-photo {
-  width: 85%;
+  width: 100%;
+  height: auto;
   animation: chromaticMove 4500ms ease infinite,light-pulse ease 200ms  infinite;
   border: 4px solid white;
   box-shadow: 10px 5px 5px rgba(39, 39, 39, .5);
@@ -80,21 +102,6 @@ body{
   width: 100%;
 }
 
-.card-row {
-  display: flex;
-  flex-grow: .8;
-  justify-content: end;
-}
-
-.skill-card {
-  display: flex;
-  justify-content: end;
-  height: fit-content;
-  padding: 0 0 0 1rem;
-  width: calc(100%/2);
-  max-width: 200px;
-}
-
 .additional-info {
   padding-top: 2rem;
 }
@@ -136,6 +143,41 @@ body{
 li {
   display: inline-flex;
   padding-left: 0.5rem;
+}
+
+@media screen and (max-width: 1250px) {
+  .info-wrapper,
+  .tech-social {
+    display: block;
+  }
+
+  /* .card-row,
+  .skill-card {
+    justify-content: start;
+  }
+
+  .skill-card {
+    padding: 0;
+  } */
+
+  .email-txt {
+    margin-left: 0;
+  }
+}
+
+@media  screen and (max-width: 992px) {
+  .tech-social {
+    display: flex;
+  }
+  
+  /* .card-row,
+  .skill-card {
+    justify-content: end;
+  }
+
+  .email-txt {
+    font-size: 2.5rem;
+  } */
 }
 
 @keyframes gradientMove { 
